--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,36 @@
     @apply text-cyan-50;
   }
   li {
-    @apply px-8;
+    @apply px-6 cursor-pointer;
   }
+}
+.content-div {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 250px;
+}
+
+.content-div:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(112, 157, 255, 0.8),
+    hsla(242, 74%, 61%, 0.8)
+  ) !important;
+}
+
+.bg-primary {
+  background-color: #0a192f;
+}
+.bg-green {
+  background-color: #77b255;
+}
+.bg-white {
+  background-color: #ffffff;
+}
+.text-black {
+  color: black;
+}
+.text-green {
+  color: #77b255;
 }
